--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -25,7 +25,7 @@
 
 @article{world2003cyanobacterial,
   title={Cyanobacterial toxins: microcystin-LR in drinking-water. Background document for development of WHO Guidelines for Drinking-water Quality. Geneva, Switzerland},
-  author={World Health Organization (WHO) and others},
+  author={World Health Organization},
   journal={World Health Organization, 2nd ed. Geneva},
   year={2003}
 }
