--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -182,14 +182,14 @@ concentrations for microcystin-LR. Using the 2007 National Lakes
 Assessment and a conditional probability approach, we identify
 chlorophyll \emph{a} concentrations that are more likely than not to be
 associated with an exceedance of a microcystin health advisory level. We
-look at the recent US EPA standards for drinking water as well as the
-World Health Organization levels for drinking water and recreational
-use. For the specific advisory microcystin concentrations of 0.3, 1,
-1.6, and 2, we find chlorophyll \emph{a} concentrations of 0.07, 0.07,
-2.79, and 11.36, respectively. When managing for these various
-microcystin levels, exceeding these reported chlorophyll \emph{a}
-concentrations should be a trigger for further testing and possible
-management action.
+look at the recent US EPA health advisories for drinking water as well
+as the World Health Organization levels for drinking water and
+recreational use. For the specific advisory microcystin concentrations
+of 0.3, 1, 1.6, and 2, we find chlorophyll \emph{a} concentrations of
+0.07, 0.07, 2.79, and 11.36, respectively. When managing for these
+various microcystin levels, exceeding these reported chlorophyll
+\emph{a} concentrations should be a trigger for further testing and
+possible management action.
 
 \vspace{3mm}
 
@@ -207,9 +207,9 @@ microcystin-LR (one of the more common toxins) concentrations that would
 trigger health advisories (McElhiney and Lawton 2005, Zurawell et al.
 2005, USEPA 2015). Additionally, the World Health Organization (WHO) has
 had proposed advisory levels for drinking water and a range of
-recreational risk levels (Chorus and Bartram 1999, (WHO) and others
-2003). While these levels and associated advisories are likely to help
-mitigate the impacts from harmful algal blooms, they are not without
+recreational risk levels (Chorus and Bartram 1999, Organization 2003).
+While these levels and associated advisories are likely to help mitigate
+the impacts from harmful algal blooms, they are not without
 complications.
 
 One of these complications is that they rely on available measurements
@@ -230,7 +230,7 @@ quality that are readily assessed in the field. For instance, there are
 small or hand held fluorometers that measure chlorohpyll \emph{a}.
 Additionally, chlorophyll \emph{a} is a very commonly measured component
 of water quality that is also known to be positively associated with
-Microsystin-LR concentrations (Pip and Bowman 2014, Yuan et al. 2014).
+microsystin-LR concentrations (Pip and Bowman 2014, Yuan et al. 2014).
 Yuan et. al (2014) explore these associations in detail and control for
 other related variables. In their analysis they find that total nitrogen
 and chlorophyll \emph{a} show the strongest association with
@@ -287,7 +287,7 @@ probability of effect advisory level of 2 \(\mu\)g/L (WHO Recreational).
 Conditional probability analysis provides information about the
 probability of observing one event given another event has also occured.
 For this analysis, we used CPA to examine how the conditional
-probability of exceeding one of the health advisory changes as
+probability of exceeding one of the health advisories changes as
 chlorophyll \emph{a} increases in a lake. We expect to find higher
 chlorohpyll \emph{a} concentrations to be associated with higher
 probabilities of exceeding the microcystin-LR health advisory levels. We
@@ -362,7 +362,7 @@ words, we would like to avoid Type II errors and minimize the proportion
 of false negatives. For the four chlorophyll \emph{a} cut-offs we had a
 proportion of false negatives of 0\%, 0\%, 0\% and , 1\% for the U.S EPA
 childrens drinking water, the WHO drinking water, the USEPA adult
-drinking water, and the WHO recreational advisories, respecitvely. In
+drinking water, and the WHO recreational advisories, respectively. In
 each case we miss less than 10\% of the lakes that are in fact exceeding
 the microcystin-LR advisory.
 
@@ -391,7 +391,7 @@ Lastly, using chlorophyll \emph{a} is not meant as a replacement for
 testing of microcystin-LR. It should be used when other, direct
 measurements of cyanotoxins are not available. In those cases, which are
 likely to be common at least in the near future, using a more ubiquitous
-meausrement, such as chlorophyll \emph{a} will provide a reasonable
+measurement, such as chlorophyll \emph{a} will provide a reasonable
 proxy for the probability of exceeding a microcystin-LR health advisory
 level and provide better protection against adverse effects in both
 drinking and recreational use cases.
@@ -410,10 +410,6 @@ and microcystin-LR. \label{fig:chla_micro_scatter}}
 \end{figure}
 
 \newpage
-
-\begin{verbatim}
-## Loading required package: grid
-\end{verbatim}
 
 \begin{figure}[htbp]
 \centering
@@ -595,6 +591,11 @@ Miller, T. R., L. Beversdorf, S. D. Chaston, and K. D. McMahon. 2013.
 Spatiotemporal molecular analysis of cyanobacteria blooms reveals
 microcystis-aphanizomenon interactions. PloS one 8:e74933.
 
+Organization, W. H. 2003. Cyanobacterial toxins: Microcystin-lR in
+drinking-water. background document for development of wHO guidelines
+for drinking-water quality. geneva, switzerland. World Health
+Organization, 2nd ed. Geneva.
+
 Paul, J. F., and M. E. McDonald. 2005. Development of empirical,
 geographically specific water quality criteria: A conditional
 probability analysis approach 41:1211--1223.
@@ -619,11 +620,6 @@ Development, US Environmental Protection Agency Washington, DC.
 USEPA. 2015. Drinking water health advisory for the cyanobacterial
 microcystin toxins. ePA-820R15100. Office of Water, US Environmental
 Protection Agency Washington, DC.
-
-(WHO), W. H. O., and others. 2003. Cyanobacterial toxins: Microcystin-lR
-in drinking-water. background document for development of wHO guidelines
-for drinking-water quality. geneva, switzerland. World Health
-Organization, 2nd ed. Geneva.
 
 Yuan, L. L., A. I. Pollard, S. Pather, J. L. Oliver, and L. D'Anglada.
 2014. Managing microcystin: Identifying national-scale thresholds for
