--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -176,7 +176,7 @@ fn_percent$who_rec<-round((who_rec_conmat[1,2])/
 \vspace{2mm}\hrule
 
 <!-- Abstract is being wrapped in latex here so that all analysis can be run in the chunk above and the results reproducibly referenced in the abstract. -->
-Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use.  However, compared to other water quality measures, field measurements of microcystin are not commonly available due to cost and advanced understanding required to interpret results.  Addressing these issues will take time and resources.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin.  In this paper, we use this association to provide estimates of chlorophyll *a* concentrations that if exceeded would be indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability approach, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA standards for drinking water as well as the World Health Organization levels for drinking water and recreational use.  For the specific advisory microcystin concentrations of 0.3, 1, 1.6, and 2, we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microcystin levels, exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action.   
+Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use.  However, compared to other water quality measures, field measurements of microcystin are not commonly available due to cost and advanced understanding required to interpret results.  Addressing these issues will take time and resources.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin.  In this paper, we use this association to provide estimates of chlorophyll *a* concentrations that if exceeded would be indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability approach, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA health advisories for drinking water as well as the World Health Organization levels for drinking water and recreational use.  For the specific advisory microcystin concentrations of 0.3, 1, 1.6, and 2, we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microcystin levels, exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action.   
 
 \vspace{3mm}\hrule
 \doublespace
@@ -187,7 +187,7 @@ Over the last decade or so numerous events and legislative activities have raise
 
 One of these complications is that they rely on available measurements of microcystin-LR.  While laboratory testing remains the gold standard for quantifying microcystin-LR concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are not yet widely used and are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).  
 
-Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and well understood components of water quality that are readily assessed in the field.  For instance, there are small or hand held fluorometers that measure chlorohpyll *a*.  Additionally, chlorophyll *a* is a very commonly measured component of water quality that is also known to be positively associated with Microsystin-LR concentrations [@pip2014microcystin; @yuan2014managing].  Yuan et. al [-@yuan2014managing] explore these associations in detail and control for other related variables.  In their analysis they find that total nitrogen and chlorophyll *a* show the strongest association with microcystin. Furthermore, they identify chlorophyll*a* and total nitrogen concentrations that are associated with exceeding 1 $\mu$g/L of microcystin.   Given these facts, it should be possible to identify chlorophyll *a* concentrations that would be associated with the new USEPA Microcystin-LR health advisory levels for drinking water.  Identifying these associations would provide another tool for water resource managers to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  
+Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and well understood components of water quality that are readily assessed in the field.  For instance, there are small or hand held fluorometers that measure chlorohpyll *a*.  Additionally, chlorophyll *a* is a very commonly measured component of water quality that is also known to be positively associated with microsystin-LR concentrations [@pip2014microcystin; @yuan2014managing].  Yuan et. al [-@yuan2014managing] explore these associations in detail and control for other related variables.  In their analysis they find that total nitrogen and chlorophyll *a* show the strongest association with microcystin. Furthermore, they identify chlorophyll*a* and total nitrogen concentrations that are associated with exceeding 1 $\mu$g/L of microcystin.   Given these facts, it should be possible to identify chlorophyll *a* concentrations that would be associated with the new USEPA Microcystin-LR health advisory levels for drinking water.  Identifying these associations would provide another tool for water resource managers to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  
 
 In this paper we build on past efforts and utilize the National Lakes Assessment (NLA) data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [@usepa2009national; @usepa2015drinking; @chorus1999toxic].  We add to past studies by exploring associations with newly announced advisory levels and by also applying a different method, conditional probability analysis.  Utilizing different methods strengthens the evidence for suggested chlorophyll *a* levels that are associated with increased risk of exceeding the health advisory levels as those levels are not predicated on a single analytical method.  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
 
@@ -199,7 +199,7 @@ We used the 2007 NLA water quality and microcystin-LR concentration data [@usepa
 ##Conditional Probability Analysis
 We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin-LR health advisory levels [@paul2011probability].  Many levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  Thus, for this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational).
 
-Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisory changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin-LR health advisory levels.  We also caclulated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identfiy the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  As both microcystin-LR and chlorophyll *a* values were highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.  A more detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for greater detail.
+Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisories changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin-LR health advisory levels.  We also caclulated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identfiy the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  As both microcystin-LR and chlorophyll *a* values were highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.  A more detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for greater detail.
 
 #Results
 
@@ -214,13 +214,13 @@ This is the case as the probability of exceeding each of the four tested health 
 
 Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory and, `r total_accuracy$who_rec*100`% for the WHO regreational advisory (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table}, \ref{tab:adult_conmat_table}, & \ref{tab:who_rec_conmat_table}).  However, total accuracy is only one part of the prediction performace with which we are concerned.  
 
-When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives.  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`%, `r fn_percent$who_drink*100`%, `r fn_percent$epa_adult*100`% and , `r fn_percent$who_rec*100`% for the U.S EPA childrens drinking water, the WHO drinking water, the USEPA adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.
+When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives.  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`%, `r fn_percent$who_drink*100`%, `r fn_percent$epa_adult*100`% and , `r fn_percent$who_rec*100`% for the U.S EPA childrens drinking water, the WHO drinking water, the USEPA adult drinking water, and the WHO recreational advisories, respectively.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.
 
 There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll *a* and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  
 
 A second potential use is to identify possible bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanisms responsible for adverse impacts (e.g. toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
-Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous meausrement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
+Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous measurement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
 
 #Acknowledgements
 
