--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,12 @@
+@Manual{,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2015},
+    url = {https://www.R-project.org/},
+  }
+
 @article{pip2014microcystin,
   title={Microcystin and algal chlorophyll in relation to nearshore nutrient concentrations in Lake Winnipeg, Canada},
   author={Pip, Eva and Bowman, Lindsay},
